# phuhop

./: Cargo.toml  build.rs  runcc.yml
crates/phuhop_core/: Cargo.toml
crates/phuhop_core/src/: lib.rs  plugin.rs
crates/plugina/: Cargo.toml
crates/plugina/src/: lib.rs
src/: app.rs  lib.rs  main.rs
src/windows/: mod.rs  plugin.rs
