[package]
name = "phuhop_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.4"
egui = { version = "0.27.0", optional = true}
eframe = { version = "0.27.0", optional = true, default-features = false, features = [
    "accesskit", 
    "glow",
    "persistence",
] }

[features]
default = ["core"]
core= []
ui = ["egui", "eframe"]